# hri-fyp

./: .gitignore  README.md
src/fyp_ur_description/: CMakeLists.txt  package.xml
src/fyp_ur_description/rviz/: view_robot.rviz
src/fyp_ur_description/srdf/: ur_c403.srdf.xacro
src/fyp_ur_description/urdf/: ur5e_c403.urdf.xacro
src/handover_assets/: CMakeLists.txt  package.xml
src/handover_bringup/: package.xml  setup.cfg  setup.py
src/handover_bringup/launch/: handover_system.launch.py  perception.launch.py  robot_control.launch.py
src/handover_control/: package.xml  setup.cfg  setup.py
src/handover_control/handover_control/: handover_state_node.py  move_sequence.py  moveit_executor_node.py  moveit_motion_server_node.py
src/handover_interfaces/: CMakeLists.txt  package.xml
src/handover_interfaces/action/: MoveToTarget.action
src/handover_perception/: package.xml  setup.cfg  setup.py
src/handover_perception/handover_perception/: approach_pose_node.py  handover_zone_node.py  mediapipe_hand_node.py  palm_transform_node.py
src/onrobot_rg2/: package.xml  setup.cfg  setup.py
src/onrobot_rg2/onrobot_rg2/: onrobot_rg2_node.py
src/vzense_camera/: CMakeLists.txt  package.xml
src/vzense_camera/src/: DCAM710_node.cpp
