<?xml version="1.0"?>
<package format="3">
  <name>handover_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for handover system</description>
  <maintainer email="you@example.com">conall</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>vzense_camera</exec_depend>
  <exec_depend>handover_perception</exec_depend>
  <exec_depend>handover_control</exec_depend>
  <exec_depend>onrobot_rg2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>